# ringier-assignment

./: .pre-commit-config.yaml  Dockerrun.aws.json  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml  production.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/routers/: accu_weather.py  open_meteo.py
docker/app/: Dockerfile
docker/ollama/: Dockerfile
misc/: AI BE zadanie.docx
